remove hpms modify e2e (#1190)
* inicial removal of code

* remove hpms

* remove hpms from jenkinsfile

* Remove Contract Repository and modify all tests to mock contract connections

* add profile in bfd test

* revert change in end to end test

* Update EndToEndBfdTests.java

* Add properties service url in jenkins

* Cmmit not to connect on regular tests

* Update application.coverage.properties

* Update application.common.properties

* Update application.common.properties

* Update application.properties

* Update application.common.properties

* test properties change

* Modify Containers and temp remove jenkins tests

* Update Jenkinsfile

* Update docker-compose.yml

* hpms

* Add print

* Update docker-compose.yml

* test builds

* Test mocks

* Update CoverageSnapshotTest.java

* Update docker-compose.yml

* disable env

* Update docker-compose.yml

* Update docker-compose.yml

* code cleanup

* Update CoverageDriverTest.java

* Update application.properties

* Add url to contract image

* code cleanup

* Update using sandbox

* temp disable jenkins tests for sanity

* Update docker-compose.yml

* Update Jenkinsfile

* Update Jenkinsfile

* Update Jenkinsfile

* Remove uneeded env variables, adds variables and images for local use

* Update CoverageDriverTest.java

* remove unneeded code